crates/swc/tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es2015.2.minified/output.js
var A, M2;
!function(A1) {
    let B;
    (B || (B = {
    })).C = class {
    }, A1.B = B;
}(A || (A = {
})), (function(M21) {
    var Point;
    let X;
    (X || (X = {
    })).Point = Point, M21.X = X;
})(M2 || (M2 = {
}));
